# hello-salad

./: CHANGELOG.md  hello-salad.cabal  run.sh
app/: Main.hs
src/: Game.hs
